# ACEPilot

./: CMakeLists.txt  CMakeSettings.json  README.md
MAIN/: CMakeLists.txt
MAIN/Settings/: YK_settings_H.json  YK_settings_X.json  YK_settings_X_1.json  YK_settings_X_Zeppelin.json  rc_pilot_startup_script_YK_WSL.sh  rc_pilot_startup_script_Zeppelin.sh
MAIN/include/: AdafruitGPS_cmds.hpp  adafruit_servo_driver.hpp  coordinates.h  gps.h  i2c_driver.hpp  main.hpp  serial_com.h  servos.hpp  tools.h
MAIN/include/controllers/: controller.hpp  filter_gen.hpp  servo_controller.hpp
MAIN/include/core/: feedback.h  feedback.hpp  flight_mode.h  flight_mode.hpp  input_manager.h  input_manager.hpp  log_manager.h  log_manager.hpp  main.hpp  mavlink_manager.h  mix.h  mix.hpp  printf_manager.h  printf_manager.hpp  rc_pilot_defs.h  rc_pilot_defs.hpp  setpoint_gen.hpp  setpoint_manager.h  setpoint_manager.hpp  settings.h  settings.hpp  state_estimator.h  state_estimator.hpp  thread_defs.h  thread_defs.hpp  thrust_map.h  thrust_map.hpp
MAIN/include/general/: coordinate_frames_gen.h  coordinate_frames_gen.hpp  feedback_filter_gen.hpp  mocap_gen.hpp  sensors_gen.hpp  setpoint_gen.hpp  settings_gen.hpp  signal_filter_gen.hpp  thread_gen.hpp
MAIN/include/general/sensors/: IMU_9DOF_gen.hpp  accel_gen.hpp  barometer_gen.hpp  compass_gen.hpp  gyro_gen.hpp  mocap_gen.hpp  sensors_gen.hpp  voltage_sensor_gen.hpp
MAIN/include/guidance/: coordinates.hpp  gps.h  gps.hpp  path.hpp  setpoint_guidance.hpp  state_machine.hpp
MAIN/include/io/: AdafruitGPS_cmds.hpp  adafruit_servo_driver.hpp  comms_manager.hpp  comms_tmp_data_packet.h  i2c_driver.hpp  serial_com.h
MAIN/include/mod/: benchmark.h  benchmark.hpp  comms_manager.hpp  comms_tmp_data_packet.h  extra_sensors.hpp  gen_thread.hpp  math_utils.h  mix_servos.hpp  path.h  servo_mix_defs.h  servos.hpp  setpoint_guidance.hpp  state_machine.h  state_machine.hpp  tools.h  trajectories_common.h  trajectories_common.hpp
MAIN/include/navigation/: EKF.hpp  EKF2.hpp  KF.hpp
MAIN/include/opt/: gps.h  telem_packet_t.h  xbee_packet_Long_t.h  xbee_packet_t.h  xbee_receive.h
MAIN/src/: coordinates.c  gps.c  i2c_driver.cpp  main.cpp  serial_com.c  servos.cpp  tools.c
MAIN/src/controllers/: controller.cpp  filter_gen.cpp  servo_controller.cpp
MAIN/src/core/: feedback.c  feedback.cpp  flight_mode.c  flight_mode.cpp  input_manager.c  input_manager.cpp  log_manager.c  log_manager.cpp  main.cpp  mix.c  mix.cpp  printf_manager.c  printf_manager.cpp  setpoint_gen.cpp  setpoint_manager.c  setpoint_manager.cpp  settings.c  settings.cpp  state_estimator.c  state_estimator.cpp  thrust_map.c  thrust_map.cpp
MAIN/src/general/: coordinate_frame_gen.cpp  coordinate_frames_gen.c  coordinate_frames_gen.cpp  feedback_filter_gen.cpp  mocap_gen.cpp  sensors_gen.cpp  setpoint_gen.cpp  settings_gen.cpp  signal_filter_gen.cpp  thread_gen.cpp
MAIN/src/general/sensors/: IMU_9DOF_gen.cpp  accel_gen.cpp  barometer_gen.cpp  compass_gen.cpp  gyro_gen.cpp  mocap_gen.cpp  sensors_gen.cpp  voltage_sensor_gen.cpp
MAIN/src/guidance/: coordinates.cpp  gps.cpp  path.cpp  setpoint_guidance.cpp  state_machine.cpp
MAIN/src/io/: AdafruitGPS_cmds.cpp  adafruit_servo_driver.cpp  comms_manager.cpp  i2c_driver.cpp  serial_com.c
MAIN/src/mod/: benchmark.cpp  comms_manager.cpp  extra_sensors.cpp  gen_thread.cpp  math_utils.c  mix_servos.cpp  path.c  servos.cpp  setpoint_guidance.cpp  state_machine.c  state_machine.cpp  tools.c  trajectories_common.c  trajectories_common.cpp
MAIN/src/navigation/: EKF.cpp  EKF2.cpp  KF.cpp
MAIN/src/opt/: AdafruitGPS_cmds.cpp  adafruit_servo_driver.cpp  gps.c  xbee_receive.c
MAIN/trajectories/: 1_8_loop_yaw_FFS.cfg  1_8_loop_yaw_polys.cfg  1_Circle_2x2_FFS.cfg  1_Circle_2x2_polys.cfg  1_Lab_true_3_blocks_FFS.cfg  1_Lab_true_3_blocks_MS.cfg  1_Lab_true_3_blocks_polys.cfg  1_Line_FFS.cfg  1_Line_polys.cfg  1_Spiral_2x2_FFS.cfg  1_Spiral_2x2_polys.cfg  1_Square_2x2_FFS.cfg  1_Square_2x2_MS.cfg  1_Square_2x2_polys.cfg  2_Line_FFS.cfg  exp_path_1.cfg  exp_path_1_x4.cfg  exp_path_1_x4_yaw.cfg  exp_path_8_x1_yaw_FFS.cfg  exp_path_8_x1_yaw_MS.cfg  landing_waypoints.cfg  old_guided_waypoints.cfg  takeoff_waypoints.cfg  test_polys.txt  traj_min_snap.txt  trajectory_square_15s.cfg  trajectory_square_30s.cfg  trajectory_square_60s.cfg
libs/: CMakeLists.txt  GPS.py
libs/Adafruit_BNO055-master/: CMakeLists.txt
libs/Adafruit_BNO055-master/include/: Adafruit_BNO055.hpp
libs/Adafruit_BNO055-master/src/: Adafruit_BNO055.cpp
libs/Adafruit_Sensor-master/: CMakeLists.txt
libs/Adafruit_Sensor-master/include/: Adafruit_Sensor.hpp
libs/Adafruit_Sensor-master/src/: Adafruit_Sensor.cpp
libs/Serial_Tools/: CMakeLists.txt
libs/Serial_Tools/include/: crc16.h  serial_transmit.hpp  serialib.h
libs/Serial_Tools/src/: serial_transmit.cpp  serialib.cpp
libs/i2c_driver_lib/: CMakeLists.txt
libs/i2c_driver_lib/src/: i2c_driver.cpp
libs/json-c_lib/apps/: json_parse.c
libs/librobotcontrol-master/: servo_driver.cpp  servo_driver.hpp
libs/lwgps/: CMakeLists.txt
libs/lwgps/include/: lwgps.h
libs/lwgps/src/: lwgps.c
libs/lwrb/: CMakeLists.txt
libs/lwrb/src/: lwrb.c
libs/serial_tools_lib/include/: serial_transmit.hpp  serialib.h
libs/serial_tools_lib/src/: serial_transmit.cpp
